@@ -7,6 +7,7 @@ New features
 Bug fixes
 ~~~~~~~~~
 - #2218: Validateion errors for file objects coming from a datamodel
+- #1998: fixed some rarely executed internal logic
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
